# level3_recsys_finalproject-recsys-09

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 기능-수정.md  버그-발견.md
.github/workflows/: cfmodel_check.yml  docker_push.yml  gcp_check.yml  model_serving.yml  web_serving.yml  web_serving_main.yml
Backend/: openapi_GCP.py  simple_input.html
Backend/backend_model/: .env.example  Dockerfile  README.md  pyproject.toml
Backend/backend_model/app/: main.py
Backend/backend_model/app/api/routes/: api.py  model_cf.py  model_hb.py  model_rec.py  openapi.py  popular.py
Backend/backend_model/app/core/: config.py  events.py
Backend/backend_model/app/models/: prediction.py
Backend/backend_model/app/services/: filters.py  predict.py  preprocess.py
Backend/backend_model/ml/model/examples/: modelinput.json
Backend/backend_model/tests/: test.py  test_actions.py
Backend/web/: Dockerfile  app.py  bigquery_table.py  data_class.py  pyproject.toml
Backend/web/api/: abtest_output.py  home.py  input.py  output.py
Backend/web/core/: config.py  input_process.py  output_process.py  preload.py  save_db.py
Backend/web/database/: bigquery.py  db.py
Backend/web/schemas/: request.py  response.py
Data/: #_of_player_mapping.ipynb  MetaCriticScraper.py  crawling_practice copy.ipynb  data_preprocess.ipynb  game_data_crawling.ipynb  game_url_crawling.ipynb  game_url_crawling.py  genre_mapping.csv  postgre.ipynb  review_sample_crawling.ipynb
Data/bigquery/: big_query.ipynb
Data/crawling/: GPT_review.ipynb  MetaCriticScraper.py  game_url_crawling.py  user_crawling.ipynb
Data/postgre/: postgre.ipynb
Data/preprocess/: data_preprocess.ipynb  genre_mapping.csv  genre_mapping.ipynb  test_user_sampling.ipynb  user_crawling_preprocess.ipynb
Data/user_sample_data/: user_sample_crawling.ipynb
Frontend/: input.css  input.html  input.js  loading.html  main.css  main.html  next.js  output.css  output.html  outputdemo.css  outputdemo.html  search.js
Model/: content_based_model_prototype.ipynb  filters.py  model.py  model_.py  model_practice.ipynb  performance_check.py
Model/Recbole/: inference.py  main.py  preprocess.py  requirements.txt
Model/Recbole/trainer/: rebole_inference.py  rebole_train.py
Model/Recbole/utils/: preprocess_data.py
Model/src/: filters.py  precision_recall.py
