[tool.poetry]
name = "Backend Model"
version = "0.1.0"
description = "model serving with FastAPI"
authors = ["heewonKwak (hewo1217@likelion.org)"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.0"
uvicorn = "0.22.0"
pydantic = "^1.3"
requests = "^2.22.0"
loguru = "^0.7.0"
joblib = "^1.2.0"
scikit-learn = "^1.2.0"
pandas = "^2.0.3"
sqlalchemy = "^2.0.18"
psycopg2 = "^2.9.6"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^2.0.0"
ipdb = "^0.13.0"
pylint = "^2.15.8"

[tool.poetry.group.aws]
optional = true

[tool.poetry.group.aws.dependencies]
mangum = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''