[tool.poetry]
name = "Backend Model"
version = "0.1.0"
description = "model serving with FastAPI"
authors = ["heewonKwak (hewo1217@likelion.org)"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.0"
redis = "^3.4.1"
direct-redis = "^0.3.1"
uvicorn = "0.22.0"
pydantic = "^1.3"
requests = "^2.22.0"
loguru = "^0.7.0"
joblib = "^1.2.0"
scikit-learn = "^1.2.0"
pandas = "^2.0.3"
sqlalchemy = "^2.0.18"
psycopg2 = "^2.9.6"
openai = "^0.27.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''