[tool.poetry]
name = "backend"
version = "0.1.0"
description = "game recommendation website backend"
authors = ["khj <bbb6254177@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
openapi = "^1.1.0"
httpx = "^0.24.1"
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.18"
pandas = "^2.0.3"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
